--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">CommerceShop</string>
     <string name="home">Home</string>
     <string name="cart">Cart</string>
+    <string name="to_product_list_screen">Go to —> ProductList Screen</string>
+    <string name="product_detail">Product Detail Screen</string>
+    <string name="to_product_detail_screen">Go to —> ProductDetail Screen</string>
+    <string name="product_list">Product List Screen</string>
+    <string name="to_back">Go back</string>
 </resources>
